Tue Mar 13 22:04:35 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/unload_libace.mpb: Squish the VC8 warning about deprecated
          fopen().

Tue Mar 13 19:36:09 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdio.cpp (snprintf): Back off use of _vsnwprintf_s() in
          the wide-char version as was done in the narrow-char version (see
          Mon Mar 12 17:55:18 UTC 2007  Steve Huston  <shuston@riverace.com>).
          Also, in sprintf(), correct the selection of 3 vs 4 arg call for
          WinCE.

Tue Mar 13 18:43:28 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added a new test that only runs when the CORBA_E_COMPACT
          configuration is enabled.

Tue Mar 13 13:21:49 UTC 2007  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed unnecessary PLATFORM_SSL_* settings.

Tue Mar 13 12:13:37 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/vc8_warnings.mpb: For the
          vc8_avoid_crt_secure_warnings feature, add /wd4996 to the nmake
          case since it seems to not pay attention to _CRT_NONSTDC_NO_WARNINGS.
          Also, reversed the default for VC8 SCL secure warnings - they're on
          by default since Ossama implemented the checked STL iterator stuff.

Tue Mar 13 09:57:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new DynUnion_Test

Tue Mar 13 00:24:22 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * bin/MakeProjectCreator/config/vc8nmake.mpb:

          Subtract /EHsc from the compiler flags instead of /EHs.  MPC now
          uses /EHsc as the correct replacement for /GX.

Mon Mar 12 23:44:25 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/checked_iterator.h (ACE_make_checked_array_iterator):

          Added documentation for this header.
